# mlx3D

./: .buildinfo  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  main.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml
.circleci/: config.yml
.doctrees/: environment.pickle  index.doctree  main.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yml  publish.yml  tests.yml
_sources/: main.md
api/cameras/: index.html
api/datasets/: index.html
api/io/: index.html
api/losses/: index.html
api/nn/: index.html
api/ops/: index.html
api/renderer/: index.html
api/splatting/: index.html
api/structures/: index.html
api/transforms/: index.html
api/utils/: index.html
api/viewer/: index.html
benchmarks/: index.html
conventions/: index.html
docs/: benchmarks.md  conventions.md  index.md  quickstart.md  release.md  viewer.md
docs/api/: cameras.md  datasets.md  io.md  losses.md  nn.md  ops.md  renderer.md  splatting.md  structures.md  transforms.md  utils.md  viewer.md
docs/tutorials/: extending.md  gaussian_splatting.md  hashgrid_nerf.md  mesh_lighting.md  mesh_optimization.md  mesh_rendering.md  nerf.md  pointcloud_fitting.md
documentation/source/: conf.py  index.rst
examples/: README.md  benchmark.py  benchmark_gaussian_splatting.py  extend_renderer.py  extract_mesh.py  fit_gaussians.py  fit_mesh.py  fit_nerf.py  fit_pointcloud.py  hello_cube.py  raytrace_volume.py  refine_pose.py  render_mesh.py  render_mesh_lit.py  sdf_csg.py  train_gaussian_splatting.py  train_nerf.py  train_ngp_nerf.py  view_scene.py
mlx3d/structures/: meshes.py
mlx3d/utils/: __init__.py  array_utils.py
outputs/: fitted_points.ply
quickstart/: index.html
search/: search_index.json
src/mlx3d/: __init__.py
src/mlx3d/cameras/: __init__.py  cameras.py
src/mlx3d/cli/: __init__.py  compact.py  eval.py  render.py
src/mlx3d/datasets/: __init__.py  blender.py  colmap.py  images.py  instant_ngp.py
src/mlx3d/io/: __init__.py  gltf_io.py  image_io.py  obj_io.py  ply_io.py
src/mlx3d/losses/: __init__.py  chamfer.py  image_metrics.py  lpips.py  mesh_losses.py  point_mesh.py
src/mlx3d/nn/: __init__.py  accel.py  fused_mlp.py  hashgrid.py  instant_ngp.py  nerf.py  occupancy.py
src/mlx3d/ops/: __init__.py  ball_query.py  geometry.py  knn.py  marching_cubes.py  ray_mesh.py  sample_points.py  sdf.py  subdivide.py
src/mlx3d/renderer/: __init__.py  hello.py  mesh.py  points.py  protocols.py  rasterizer.py  rays.py  shading.py
src/mlx3d/splatting/: __init__.py  model.py  projection.py  rasterize.py  reference.py  render.py  sh.py  tiles.py  trainer.py
src/mlx3d/structures/: __init__.py  meshes.py  pointclouds.py
src/mlx3d/transforms/: __init__.py  rotations.py  se3.py
src/mlx3d/utils/: __init__.py  array_utils.py  primitives.py
src/mlx3d/viewer/: __init__.py  __main__.py  server.py  viewer.html
tests/: conftest.py  test_behavior.py  test_cameras.py  test_cli_compact.py  test_cli_eval.py  test_cli_render.py  test_datasets.py  test_image_io.py  test_import.py  test_io.py  test_mesh_rendering.py  test_mesh_structure.py  test_nerf_renderer.py  test_ops_losses.py  test_ops_sdf.py  test_rasterizer.py  test_se3.py  test_smoke.py  test_splatting.py  test_structures.py  test_transforms.py  test_viewer.py
tutorials/extending/: index.html
tutorials/gaussian_splatting/: index.html
tutorials/hashgrid_nerf/: index.html
tutorials/mesh_lighting/: index.html
tutorials/mesh_optimization/: index.html
tutorials/mesh_rendering/: index.html
tutorials/nerf/: index.html
tutorials/pointcloud_fitting/: index.html
viewer/: index.html
