[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx3d"
version = "0.1.0"
description = "Differentiable 3D computer vision on Apple Silicon, built on MLX"
authors = [{ name = "AmirHossein Razlighi", email = "arazlighi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "3D", "graphics", "renderer", "differentiable", "MLX", "Apple Silicon",
  "Metal", "gaussian splatting", "nerf", "computer vision",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "mlx>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "numpy>=1.24",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[project.scripts]
mlx3d-view = "mlx3d.viewer.__main__:main"

[project.urls]
Homepage = "https://github.com/amirhossein-razlighi/mlx3D"
Documentation = "https://amirhossein-razlighi.github.io/mlx3D/"
Repository = "https://github.com/amirhossein-razlighi/mlx3D"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx3d"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "smoke: fast import/public-API checks that the package is wired together",
  "unit: focused tests of a single function or class",
  "behavior: end-to-end gradient/optimization behavior across modules",
  "data: dataset loaders against synthetic in-process fixtures",
]
